limpieza datos parte 1

--- a/dataset/mobilrec.ipynb
+++ b/dataset/mobilrec.ipynb
@@ -2,32 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d9d0e59d",
+   "execution_count": null,
+   "id": "e6d2b242",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05a70c9a79044372b4592f477fb2cf40",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/19298 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "There are 19297019 interactions in mobilerec dataset.\n",
-      "There are 10173 unique apps in mobilerec dataset.\n",
-      "There are 700111 unique users in mobilerec dataset.\n",
-      "There are 48 unique categories in mobilerec dataset.\n"
+      "C:\\Users\\tomas\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -258,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
