--- a/limpieza_datos.ipynb
+++ b/limpieza_datos.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 2,
    "id": "2cc5e6bf",
    "metadata": {},
    "outputs": [],
@@ -36,15 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 6,
    "id": "3158c19b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "screen_times = pd.read_csv(\"dataset\\screentime_analysis.csv\")\n",
-    "moblie_usuage = pd.read_csv(\"dataset\\mobile_usage_behavioral_analysis.csv\")\n",
-    "google_play_store_user = pd.read_csv(\"dataset\\google\\googleplaystore_user_reviews.csv\")\n",
-    "google_play_store = pd.read_csv(\"dataset\\google\\googleplaystore.csv\")"
+    "screen_times = pd.read_csv(\"dataset/screentime_analysis.csv\")\n",
+    "moblie_usuage = pd.read_csv(\"dataset/mobile_usage_behavioral_analysis.csv\")\n",
+    "google_play_store_user = pd.read_csv(\"dataset/google/googleplaystore_user_reviews.csv\")\n",
+    "google_play_store = pd.read_csv(\"dataset/google/googleplaystore.csv\")\n",
+    "mbr = pd.read_csv(\"dataset/mobilerec_part_1.csv\")"
    ]
   },
   {
@@ -439,6 +440,203 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed403724",
+   "metadata": {},
+   "source": [
+    "# MobileRec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e2804408",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>app_package</th>\n",
+       "      <th>review</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>date</th>\n",
+       "      <th>uid</th>\n",
+       "      <th>formated_date</th>\n",
+       "      <th>unix_timestamp</th>\n",
+       "      <th>app_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>com.cleverapps.heroes</td>\n",
+       "      <td>It's really a fun game</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>October 21, 2018</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2018-10-21</td>\n",
+       "      <td>1.540094e+09</td>\n",
+       "      <td>Casual</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>com.bodyfast</td>\n",
+       "      <td>uninstalling. it was ok but felt like it was c...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>January 18, 2019</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2019-01-18</td>\n",
+       "      <td>1.547788e+09</td>\n",
+       "      <td>Health &amp; Fitness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>com.thrivegames.wordshapes</td>\n",
+       "      <td>Love this game</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>January 16, 2021</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-01-16</td>\n",
+       "      <td>1.610773e+09</td>\n",
+       "      <td>Word</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>com.affinity.rewarded_play</td>\n",
+       "      <td>Doesn't update play time. Just downloaded it 3...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>November 4, 2021</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-11-04</td>\n",
+       "      <td>1.635998e+09</td>\n",
+       "      <td>Entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dating.inmessage.net</td>\n",
+       "      <td>app crashes every time I try to log in. what g...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>November 24, 2021</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-11-24</td>\n",
+       "      <td>1.637730e+09</td>\n",
+       "      <td>Dating</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  app_package  \\\n",
+       "0       com.cleverapps.heroes   \n",
+       "1                com.bodyfast   \n",
+       "2  com.thrivegames.wordshapes   \n",
+       "3  com.affinity.rewarded_play   \n",
+       "4        dating.inmessage.net   \n",
+       "\n",
+       "                                              review  rating  votes  \\\n",
+       "0                             It's really a fun game       5      1   \n",
+       "1  uninstalling. it was ok but felt like it was c...       2      0   \n",
+       "2                                     Love this game       4      1   \n",
+       "3  Doesn't update play time. Just downloaded it 3...       1      1   \n",
+       "4  app crashes every time I try to log in. what g...       1      0   \n",
+       "\n",
+       "                date               uid formated_date  unix_timestamp  \\\n",
+       "0   October 21, 2018  shqoc6X1fcJRLEmx    2018-10-21    1.540094e+09   \n",
+       "1   January 18, 2019  shqoc6X1fcJRLEmx    2019-01-18    1.547788e+09   \n",
+       "2   January 16, 2021  shqoc6X1fcJRLEmx    2021-01-16    1.610773e+09   \n",
+       "3   November 4, 2021  shqoc6X1fcJRLEmx    2021-11-04    1.635998e+09   \n",
+       "4  November 24, 2021  shqoc6X1fcJRLEmx    2021-11-24    1.637730e+09   \n",
+       "\n",
+       "       app_category  \n",
+       "0            Casual  \n",
+       "1  Health & Fitness  \n",
+       "2              Word  \n",
+       "3     Entertainment  \n",
+       "4            Dating  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mbr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57f8d5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100000, 9)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   app_package     100000 non-null  object \n",
+      " 1   review          99993 non-null   object \n",
+      " 2   rating          100000 non-null  int64  \n",
+      " 3   votes           100000 non-null  int64  \n",
+      " 4   date            100000 non-null  object \n",
+      " 5   uid             100000 non-null  object \n",
+      " 6   formated_date   100000 non-null  object \n",
+      " 7   unix_timestamp  100000 non-null  float64\n",
+      " 8   app_category    100000 non-null  object \n",
+      "dtypes: float64(1), int64(2), object(6)\n",
+      "memory usage: 6.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mbr.shape)\n",
+    "mbr.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74841fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mbr[\"review\"].isnull().sum() \n",
+    "# Eliminar filas con reseñas nulas\n",
+    "mbr = mbr.dropna(subset=[\"review\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e771ddb",
    "metadata": {},
    "source": [
@@ -475,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
