--- a/limpieza_datos.ipynb
+++ b/limpieza_datos.ipynb
@@ -182,7 +182,7 @@
       " 8   Gaming_App_Usage_Hours        1000 non-null   float64\n",
       " 9   Location                      1000 non-null   object \n",
       "dtypes: float64(5), int64(3), object(2)\n",
-      "memory usage: 78.2+ KB\n"
+      "memory usage: 78.3+ KB\n"
      ]
     }
    ],
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "d4c08001",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "4   Role Playing  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "4600b783",
    "metadata": {},
    "outputs": [],
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "026ee506",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "cc8c1976",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "262c481a",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "ff160afc",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "c6b427b3",
    "metadata": {},
    "outputs": [
@@ -889,6 +889,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>app_package</th>\n",
+       "      <th>review</th>\n",
        "      <th>rating</th>\n",
        "      <th>votes</th>\n",
        "      <th>uid</th>\n",
@@ -900,6 +901,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>com.cleverapps.heroes</td>\n",
+       "      <td>It's really a fun game</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>shqoc6X1fcJRLEmx</td>\n",
@@ -909,6 +911,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>com.bodyfast</td>\n",
+       "      <td>uninstalling. it was ok but felt like it was c...</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>shqoc6X1fcJRLEmx</td>\n",
@@ -918,6 +921,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>com.thrivegames.wordshapes</td>\n",
+       "      <td>Love this game</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>shqoc6X1fcJRLEmx</td>\n",
@@ -927,6 +931,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>com.affinity.rewarded_play</td>\n",
+       "      <td>Doesn't update play time. Just downloaded it 3...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>shqoc6X1fcJRLEmx</td>\n",
@@ -936,6 +941,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>dating.inmessage.net</td>\n",
+       "      <td>app crashes every time I try to log in. what g...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>shqoc6X1fcJRLEmx</td>\n",
@@ -947,45 +953,52 @@
        "</div>"
       ],
       "text/plain": [
-       "                  app_package  rating  votes               uid formated_date  \\\n",
-       "0       com.cleverapps.heroes       5      1  shqoc6X1fcJRLEmx    2018-10-21   \n",
-       "1                com.bodyfast       2      0  shqoc6X1fcJRLEmx    2019-01-18   \n",
-       "2  com.thrivegames.wordshapes       4      1  shqoc6X1fcJRLEmx    2021-01-16   \n",
-       "3  com.affinity.rewarded_play       1      1  shqoc6X1fcJRLEmx    2021-11-04   \n",
-       "4        dating.inmessage.net       1      0  shqoc6X1fcJRLEmx    2021-11-24   \n",
+       "                  app_package  \\\n",
+       "0       com.cleverapps.heroes   \n",
+       "1                com.bodyfast   \n",
+       "2  com.thrivegames.wordshapes   \n",
+       "3  com.affinity.rewarded_play   \n",
+       "4        dating.inmessage.net   \n",
        "\n",
-       "       app_category  \n",
-       "0            Casual  \n",
-       "1  Health & Fitness  \n",
-       "2              Word  \n",
-       "3     Entertainment  \n",
-       "4            Dating  "
+       "                                              review  rating  votes  \\\n",
+       "0                             It's really a fun game       5      1   \n",
+       "1  uninstalling. it was ok but felt like it was c...       2      0   \n",
+       "2                                     Love this game       4      1   \n",
+       "3  Doesn't update play time. Just downloaded it 3...       1      1   \n",
+       "4  app crashes every time I try to log in. what g...       1      0   \n",
+       "\n",
+       "                uid formated_date      app_category  \n",
+       "0  shqoc6X1fcJRLEmx    2018-10-21            Casual  \n",
+       "1  shqoc6X1fcJRLEmx    2019-01-18  Health & Fitness  \n",
+       "2  shqoc6X1fcJRLEmx    2021-01-16              Word  \n",
+       "3  shqoc6X1fcJRLEmx    2021-11-04     Entertainment  \n",
+       "4  shqoc6X1fcJRLEmx    2021-11-24            Dating  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#eliminamos columnas no útiles??? igual hay que ver si nos sirven ono xdd\n",
-    "mbr = mbr.drop(columns=['review', 'date', 'unix_timestamp'])\n",
+    "mbr = mbr.drop(columns=['date', 'unix_timestamp'])\n",
     "mbr.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "b1d8e180",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(199987, 6)"
+       "(199987, 7)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "9f3a2891",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "f856099d",
    "metadata": {},
    "outputs": [
@@ -1045,12 +1058,12 @@
       "uid                              \n",
       "T77ZlTef7IEhOxdg     29  2.931034\n",
       "F8KMGk4nmPKUdG7P     28  2.964286\n",
-      "jOm4apAMxtsmDOvs     27  3.555556\n",
       "3600qRh0ITB5C8hp     27  3.629630\n",
+      "jOm4apAMxtsmDOvs     27  3.555556\n",
       "t9I3kpfZiOv5SGDK     26  3.076923\n",
-      "NqhTSgQq5RyzlrFA     25  3.360000\n",
       "T5v7WX2IjAcgtmTD     25  3.280000\n",
       "3wWp8nBZA3XavCdj     25  3.440000\n",
+      "NqhTSgQq5RyzlrFA     25  3.360000\n",
       "HCm5E6gKT9nfmgjb     25  3.320000\n",
       "1utYW0ANevrcHcZL     24  3.541667\n"
      ]
@@ -1071,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "4cfc0085",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "e60c7fb0",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
