--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "68a32e69",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "b660ba2b",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "f4ae1b0c",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "4      967    100000     0    0.0               0    Art & Design;Creativity  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "3a3a3f8b",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "4          1                1.00                0.300000  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "292a16bb",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "4  shqoc6X1fcJRLEmx    2021-11-24            Dating  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "id": "e74cd288",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "id": "ba339dc1",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "19e158b5",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "id": "dad458d4",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "e84b1393",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "       'Auto'], dtype=object)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "id": "339cee1e",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "id": "b35c2b60",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "1b706602",
    "metadata": {},
    "outputs": [
@@ -810,6 +810,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "99a420bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# guardar archivo\n",
+    "df_merge_store.to_csv('archivos_limpios/df_merge_store.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8a941801",
    "metadata": {},
@@ -819,11 +830,228 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f0f69115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Translated_Review\n",
+       "Good         156\n",
+       "Nice         117\n",
+       "Great        104\n",
+       "Love          95\n",
+       "Awesome       67\n",
+       "I love        64\n",
+       "Very good     52\n",
+       "I like        47\n",
+       "good          41\n",
+       "Cool          40\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge_store['Translated_Review'].value_counts().head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9b92b7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>app_package</th>\n",
+       "      <th>review</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>uid</th>\n",
+       "      <th>formated_date</th>\n",
+       "      <th>app_category</th>\n",
+       "      <th>Category_Reduced</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>com.cleverapps.heroes</td>\n",
+       "      <td>It's really a fun game</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2018-10-21</td>\n",
+       "      <td>Casual</td>\n",
+       "      <td>Games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>com.bodyfast</td>\n",
+       "      <td>uninstalling. it was ok but felt like it was c...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2019-01-18</td>\n",
+       "      <td>Health &amp; Fitness</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>com.thrivegames.wordshapes</td>\n",
+       "      <td>Love this game</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-01-16</td>\n",
+       "      <td>Word</td>\n",
+       "      <td>Games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>com.affinity.rewarded_play</td>\n",
+       "      <td>Doesn't update play time. Just downloaded it 3...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-11-04</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>Entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dating.inmessage.net</td>\n",
+       "      <td>app crashes every time I try to log in. what g...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>shqoc6X1fcJRLEmx</td>\n",
+       "      <td>2021-11-24</td>\n",
+       "      <td>Dating</td>\n",
+       "      <td>Social</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  app_package  \\\n",
+       "0       com.cleverapps.heroes   \n",
+       "1                com.bodyfast   \n",
+       "2  com.thrivegames.wordshapes   \n",
+       "3  com.affinity.rewarded_play   \n",
+       "4        dating.inmessage.net   \n",
+       "\n",
+       "                                              review  rating  votes  \\\n",
+       "0                             It's really a fun game       5      1   \n",
+       "1  uninstalling. it was ok but felt like it was c...       2      0   \n",
+       "2                                     Love this game       4      1   \n",
+       "3  Doesn't update play time. Just downloaded it 3...       1      1   \n",
+       "4  app crashes every time I try to log in. what g...       1      0   \n",
+       "\n",
+       "                uid formated_date      app_category Category_Reduced  \n",
+       "0  shqoc6X1fcJRLEmx    2018-10-21            Casual            Games  \n",
+       "1  shqoc6X1fcJRLEmx    2019-01-18  Health & Fitness           Health  \n",
+       "2  shqoc6X1fcJRLEmx    2021-01-16              Word            Games  \n",
+       "3  shqoc6X1fcJRLEmx    2021-11-04     Entertainment    Entertainment  \n",
+       "4  shqoc6X1fcJRLEmx    2021-11-24            Dating           Social  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mbr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c5463894",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Translated_Review'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Paso 1: Agrupar apps por 'Translated_Review' como si fuera un proxy de usuario\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m agrupadas = \u001b[43mmbr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mTranslated_Review\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mApp\u001b[39m\u001b[33m'\u001b[39m].unique()\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Paso 2: Convertir a lista de listas\u001b[39;00m\n\u001b[32m      9\u001b[39m transacciones = agrupadas.tolist()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:9183\u001b[39m, in \u001b[36mDataFrame.groupby\u001b[39m\u001b[34m(self, by, axis, level, as_index, sort, group_keys, observed, dropna)\u001b[39m\n\u001b[32m   9180\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m level \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m by \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   9181\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mYou have to supply one of \u001b[39m\u001b[33m'\u001b[39m\u001b[33mby\u001b[39m\u001b[33m'\u001b[39m\u001b[33m and \u001b[39m\u001b[33m'\u001b[39m\u001b[33mlevel\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m-> \u001b[39m\u001b[32m9183\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDataFrameGroupBy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   9184\u001b[39m \u001b[43m    \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   9185\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m=\u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9186\u001b[39m \u001b[43m    \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9187\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9188\u001b[39m \u001b[43m    \u001b[49m\u001b[43mas_index\u001b[49m\u001b[43m=\u001b[49m\u001b[43mas_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9189\u001b[39m \u001b[43m    \u001b[49m\u001b[43msort\u001b[49m\u001b[43m=\u001b[49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9190\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgroup_keys\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgroup_keys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9191\u001b[39m \u001b[43m    \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m=\u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9192\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdropna\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   9193\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\groupby\\groupby.py:1329\u001b[39m, in \u001b[36mGroupBy.__init__\u001b[39m\u001b[34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, observed, dropna)\u001b[39m\n\u001b[32m   1326\u001b[39m \u001b[38;5;28mself\u001b[39m.dropna = dropna\n\u001b[32m   1328\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m grouper \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1329\u001b[39m     grouper, exclusions, obj = \u001b[43mget_grouper\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1330\u001b[39m \u001b[43m        \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1331\u001b[39m \u001b[43m        \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1332\u001b[39m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1333\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1334\u001b[39m \u001b[43m        \u001b[49m\u001b[43msort\u001b[49m\u001b[43m=\u001b[49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1335\u001b[39m \u001b[43m        \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mis\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mno_default\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1336\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdropna\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1337\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1339\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m observed \u001b[38;5;129;01mis\u001b[39;00m lib.no_default:\n\u001b[32m   1340\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(ping._passed_categorical \u001b[38;5;28;01mfor\u001b[39;00m ping \u001b[38;5;129;01min\u001b[39;00m grouper.groupings):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\groupby\\grouper.py:1043\u001b[39m, in \u001b[36mget_grouper\u001b[39m\u001b[34m(obj, key, axis, level, sort, observed, validate, dropna)\u001b[39m\n\u001b[32m   1041\u001b[39m         in_axis, level, gpr = \u001b[38;5;28;01mFalse\u001b[39;00m, gpr, \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1042\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1043\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(gpr)\n\u001b[32m   1044\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(gpr, Grouper) \u001b[38;5;129;01mand\u001b[39;00m gpr.key \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1045\u001b[39m     \u001b[38;5;66;03m# Add key to exclusions\u001b[39;00m\n\u001b[32m   1046\u001b[39m     exclusions.add(gpr.key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Translated_Review'"
+     ]
+    }
+   ],
+   "source": [
+    "from mlxtend.frequent_patterns import apriori, association_rules\n",
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Paso 1: Agrupar apps por 'Translated_Review' como si fuera un proxy de usuario\n",
+    "agrupadas = mbr.groupby('Translated_Review')['App'].unique()\n",
+    "\n",
+    "# Paso 2: Convertir a lista de listas\n",
+    "transacciones = agrupadas.tolist()\n",
+    "\n",
+    "# Paso 3: Transformar a formato binario para Apriori\n",
+    "te = TransactionEncoder()\n",
+    "te_ary = te.fit(transacciones).transform(transacciones)\n",
+    "df_apriori = pd.DataFrame(te_ary, columns=te.columns_)\n",
+    "\n",
+    "# Paso 4: Aplicar Apriori\n",
+    "frequent_itemsets = apriori(df_apriori, min_support=0.005, use_colnames=True)\n",
+    "print(frequent_itemsets.head())\n",
+    "\n",
+    "# Paso 5: Reglas de asociación\n",
+    "reglas = association_rules(frequent_itemsets, metric=\"lift\", min_threshold=1.1)\n",
+    "\n",
+    "# Mostrar reglas más fuertes\n",
+    "reglas_ordenadas = reglas.sort_values(by=\"lift\", ascending=False)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3ca58f22",
    "metadata": {},
    "source": [
     "# Pregunta 2:  ¿Influye el rating de las aplicaciones con las descargas de estas? Porque esto ayuda al entendimiento de la confianza digital y las decisiones de descargas de los usuarios.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a4b4ec",
+   "metadata": {},
+   "source": [
+    "clustering y correlacion y "
    ]
   }
  ],
